--- a/src/main/resources/ucf/assignments/AddItemWindow.fxml
+++ b/src/main/resources/ucf/assignments/AddItemWindow.fxml
@@ -3,27 +3,35 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="210.0" prefWidth="528.0" style="-fx-border-style: solid; -fx-border-width: 4px; -fx-border-color: white; -fx-border-radius: 5;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <VBox BorderPane.alignment="CENTER">
+      <VBox prefHeight="88.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField fx:id="serialNumberTextField" prefHeight="0.0" prefWidth="600.0" promptText="Serial Number" />
+            <TextField fx:id="serialNumberTextField" promptText="Serial Number" />
             <TextField fx:id="itemNameTextField" promptText="Item Name" />
             <TextField fx:id="itemPriceTextField" promptText="Item Price" />
          </children>
       </VBox>
    </center>
    <top>
-      <TextField alignment="TOP_CENTER" prefHeight="19.0" prefWidth="600.0" text="Add Item" BorderPane.alignment="CENTER">
+      <TextField alignment="TOP_CENTER" prefHeight="19.0" prefWidth="600.0" style="-fx-background-color: #4fc3f7; -fx-text-fill: white;" text="ADD ITEM" BorderPane.alignment="CENTER">
          <font>
-            <Font size="18.0" />
+            <Font name="System Bold" size="20.0" />
          </font>
       </TextField>
    </top>
    <bottom>
-      <Button mnemonicParsing="false" onAction="#AddItemWindowButtonClicked" text="Add Item" BorderPane.alignment="CENTER" />
+      <Pane prefHeight="84.0" prefWidth="571.0" style="-fx-background-color: #4fc3f7;" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="196.0" layoutY="23.0" mnemonicParsing="false" onAction="#AddItemWindowButtonClicked" prefHeight="33.0" prefWidth="129.0" style="-fx-background-color: #0093c4;" text="Add Item" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font></Button>
+         </children>
+      </Pane>
    </bottom>
 </BorderPane>
