solution for assignment 2

--- a/src/main/resources/ucf/assignments/MainWindow.fxml
+++ b/src/main/resources/ucf/assignments/MainWindow.fxml
@@ -19,8 +19,8 @@
         <menus>
           <Menu mnemonicParsing="false" style="-fx-color: white;" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Save As.." />
-                  <MenuItem mnemonicParsing="false" text="Load..." />
+              <MenuItem mnemonicParsing="false" onAction="#handleSaveClicked" text="Save As.." />
+                  <MenuItem mnemonicParsing="false" onAction="#handleLoadClicked" text="Load..." />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" text="Quit" />
             </items>
